# zero2prd

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: general.yml  main.yml
migrations/: 20210924131742_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs
tests/: .health_check.rs.swp  health_check.rs
