[package]
name = "zero2prd"
version = "0.1.0"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "zero2prd"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.9"
actix-rt = "2.2.0"
serde = { version = "1", features = ["derive"]}
config = "0.11.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
tokio = "1"
